Floating on left

--- a/app/templates/element_detail.html
+++ b/app/templates/element_detail.html
@@ -1,5 +1,5 @@
 <!-- Floating Element Detail Sidebar -->
-<div class="fixed top-0 right-0 h-screen w-96 bg-white shadow-lg transform transition-transform duration-300"
+<div class="fixed top-0 left-0 h-screen w-60 bg-black shadow-lg transform transition-transform duration-300"
      :class="{'translate-x-0': selectedElement, 'translate-x-full': !selectedElement}"
      x-cloak>
     <div class="h-full flex flex-col">
