--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,7 +25,7 @@
     
     <!-- {% block head %}{% endblock %} -->
 </head>
-<body class="min-h-screen bg-gray-50 bg-black text-white">
+<body class="min-h-screen bg-gray-50 bg-black">
 
 
     <main class="max-w-7xl mx-auto py-6 sm:px-6 lg:px-8">
